--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Baguette
 
 # Controls when the workflow will run
 on:
@@ -26,15 +26,10 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Set the value in bash
-        id: step_one
+      - name: JQ shenanigans
         run: |
           {
-            echo 'JSON_RESPONSE<<EOF'
-            curl https://example.com
-            echo EOF
-          } >> "$GITHUB_ENV"
-      - name: Echo the env
-        run: echo ${{env.JSON_RESPONSE}}
-      - name: Echo the env
-        run: echo "$JSON_RESPONSE"
+              printf "cliVersion="
+              cat packages/cli/core/package.json | jq -r '.version'
+          }  >> "$GITHUB_ENV"
+      - run: echo ${{env.cliVersion}}
