--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           {
               printf "cliVersion="
-              cat packages/cli/core/package.json | jq -r '.version'
+              cat foo.json | jq -r '.version'
           }  >> "$GITHUB_ENV"
       - run: echo ${{env.cliVersion}}
